# XConfig

./: .gitignore  README.md  requirements.txt
.github/workflows/: app-pipeline-keycloak-server.yml  build-agent-release.yml  build-iac-offline-installer.yml  build-k3s-offline-installer.yml  build-kong-offline-installer.yml  build-offline-package.yaml  build-pulp-offline-installer.yml  build-release.yml  self-signed-ssl-cert-workflow.yml  ssl-cert-workflow.yml
CraftWeave/: Makefile  README.md  banner.txt  go.mod  go.sum  ip.txt  main.go
CraftWeave/cmd/: ansible.go  cmdb.go  playbook.go  plugin.go  remote.go  root.go  vars.go  vault.go
CraftWeave/example/: deploy_deepflow_agent  inventory  motd.tmpl  playbook.yaml  roles_playbook.yaml
CraftWeaveAgent/: .gitignore  Cargo.toml  Makefile  Readme.md
CraftWeaveAgent/example/: cw-agent.conf  cw-agent.plist  cw-agent.service  playbook.yaml
CraftWeaveAgent/src/: config.rs  executor.rs  main.rs  models.rs  result_store.rs  scheduler.rs
config/: sites.yaml
docs/: app_arch.md  craftweave-playbook-spec.md  design.md  git-repo-provider-plan.md  git-repo-provider.md  module-plan.md  plan.md  refactor-design.md
example/: deploy_deepflow_agent  inventory  logrotate-deepflow-agent.md  logrotate-deepflow-agent.yml  run_example  vars.yaml
go-ansible/: Makefile  README.md  go.mod
infra/: go.mod  go.sum  main.go
scripts/: .gitignore  GatewayAPI-example.yaml  deploy-kong-gateway.sh  generate_ssl.sh  ingress-installer.sh  inventory.py  make_k3s_offline_package.sh  run.sh  set-k3s-cluster.sh
vpn-overlay/: README.md
(+168 files in other folders)
