[package]
name = "cw-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"  # ✅ 用于解析 YAML 格式任务列表
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
git2 = "0.18"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"

# Optional local state storage
sled = "0.34"
